# garage

./: .drone.yml  shell.nix
doc/book/connect/: _index.md  apps.md  backup.md  fs.md  repositories.md  websites.md
doc/book/cookbook/: _index.md  exposing-websites.md  exposing_websites.md  gateways.md  real_world.md  recovering.md  reverse_proxy.md
doc/book/design/: _index.md  benchmarks.md  internals.md  related-work.md
doc/book/development/: release-process.md  scripts.md
doc/book/quick-start/: _index.md
doc/book/reference-manual/: configuration.md  layout.md  s3-compatibility.md
doc/book/src/: SUMMARY.md
doc/book/src/connect/: backup.md
doc/book/src/cookbook/: security.md
doc/book/working-documents/: design-draft.md
doc/talks/2022-02-06-fosdem/: .gitignore  talk.tex
src/admin/: Cargo.toml  lib.rs  metrics.rs  opentelemetry.rs
src/api/: s3_list.rs
src/garage/: Cargo.toml  server.rs
src/garage/tests/: smoke.rs
src/util/: config.rs
